# lvif

./: .gitignore  CMakeLists.txt  Dockerfile  config.example.json  vcpkg.json
src/: main.cc
src/controllers/auth/: Auth.cc  Auth.hxx
src/controllers/book/: WsBookController.cc  WsBookController.h
src/controllers/rest/auth/: Auth.hxx
src/controllers/rest/resource/: resource.cc  resource.hxx
src/controllers/ws/book/: WsBookController.cc  WsBookController.h
src/database/: database.cc  database.hxx  init.txt
src/database/modeling/: lvif-modeling.drawio
src/filters/jwt/: jwt-filter.cc  jwt-filter.hxx
src/models/book/: book-model.cc  book-model.hxx
src/models/user/: user-model.cc  user-model.hxx
src/service/auth/: auth-service.hxx  autn-service.cc
src/service/book/: book-service.cc  book-service.hxx
src/service/user/: user-service.cc  user-service.hxx
src/utils/base64/: base64.cc  base64.hxx
src/utils/crypto/: crypto.cc  crypto.hxx
src/utils/images/: compress-image.cc  compress-image.hxx
src/utils/jwt/: jwt-utils.cc  jwt-utils.hxx
test/: CMakeLists.txt
